<resources>
    <string name="app_name">login</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No Account yet?Create one</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="pass">Pass</string>
    <string name="mail">mail</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_a_member_log_in">Already a member?Log in</string>
</resources>
