<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <EditText
        android:id="@+id/editText1"
        android:layout_width="300dp"
        android:layout_height="69dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="487dp"
        android:layout_marginEnd="197dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="304dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="641dp"
        android:layout_marginEnd="188dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button2"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="373dp"
        android:layout_marginEnd="268dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="153dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="307dp"
        android:layout_marginEnd="266dp"
        android:text="@string/create_account"
        android:clickable="true"/>
</RelativeLayout>